--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </div>
         <div class="carousel-inner carousel-fade">
             <div class="carousel-item active">
-                <img src="/images/1.jpg" class="d-block w-100" alt="...">
+                <img src="images/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to iCoder</h2>
                     <p>Technology News, Web Development and Trends.</p>
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/2.jpg" class="d-block w-100" alt="...">
+                <img src="images/2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The best coding Blog</h2>
                     <p>Technology News, Web Development and Trends.</p>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/3.jpg" class="d-block w-100" alt="...">
+                <img src="images/3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Award winning</h2>
                     <p>Technology News, Web Development and Trends.</p>
@@ -207,7 +207,7 @@
                                 <use xlink:href="#chevron-right"></use>
                             </svg> </a>
                     </div>
-                    <div class="col-auto d-none d-lg-block"> <img src="/images/thumb1.jpg" alt=""
+                    <div class="col-auto d-none d-lg-block"> <img src="images/thumb1.jpg" alt=""
                             height="250" width="200"> </div>
                 </div>
             </div>
@@ -225,7 +225,7 @@
                                 <use xlink:href="#chevron-right"></use>
                             </svg> </a>
                     </div>
-                    <div class="col-auto d-none d-lg-block"> <img src="/images/thumb2.jpg" alt=""
+                    <div class="col-auto d-none d-lg-block"> <img src="images/thumb2.jpg" alt=""
                             height="250" width="200"></div>
                 </div>
             </div>
@@ -249,7 +249,7 @@
                                 <use xlink:href="#chevron-right"></use>
                             </svg> </a>
                     </div>
-                    <div class="col-auto d-none d-lg-block"> <img src="/images/thumb3.jpg" alt=""
+                    <div class="col-auto d-none d-lg-block"> <img src="images/thumb3.jpg" alt=""
                             height="250" width="200"> </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
                                 <use xlink:href="#chevron-right"></use>
                             </svg> </a>
                     </div>
-                    <div class="col-auto d-none d-lg-block"> <img src="/images/thumb1.jpg" alt=""
+                    <div class="col-auto d-none d-lg-block"> <img src="images/thumb1.jpg" alt=""
                             height="250" width="200"></div>
                 </div>
             </div>
