--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link active" href="/">Home <span class="sr-only"></span></a>
+                        <a class="nav-link" href="/iCoderBootStrap/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/iCoderBootStrap/about.html">About</a>
                     </li>
 
 
@@ -44,7 +44,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/iCoderBootStrap/contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -148,7 +148,7 @@
         </div>
         <div class="carousel-inner carousel-fade">
             <div class="carousel-item active">
-                <img src="images/1.jpg" class="d-block w-100" alt="...">
+                <img src="/iCoderBootStrap/images/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to iCoder</h2>
                     <p>Technology News, Web Development and Trends.</p>
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/2.jpg" class="d-block w-100" alt="...">
+                <img src="/iCoderBootStrap/images/2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The best coding Blog</h2>
                     <p>Technology News, Web Development and Trends.</p>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/3.jpg" class="d-block w-100" alt="...">
+                <img src="/iCoderBootStrap/images/3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Award winning</h2>
                     <p>Technology News, Web Development and Trends.</p>
@@ -207,7 +207,7 @@
                                 <use xlink:href="#chevron-right"></use>
                             </svg> </a>
                     </div>
-                    <div class="col-auto d-none d-lg-block"> <img src="images/thumb1.jpg" alt=""
+                    <div class="col-auto d-none d-lg-block"> <img src="/iCoderBootStrap/images/thumb1.jpg" alt=""
                             height="250" width="200"> </div>
                 </div>
             </div>
@@ -225,7 +225,7 @@
                                 <use xlink:href="#chevron-right"></use>
                             </svg> </a>
                     </div>
-                    <div class="col-auto d-none d-lg-block"> <img src="images/thumb2.jpg" alt=""
+                    <div class="col-auto d-none d-lg-block"> <img src="/iCoderBootStrap/images/thumb2.jpg" alt=""
                             height="250" width="200"></div>
                 </div>
             </div>
@@ -249,7 +249,7 @@
                                 <use xlink:href="#chevron-right"></use>
                             </svg> </a>
                     </div>
-                    <div class="col-auto d-none d-lg-block"> <img src="images/thumb3.jpg" alt=""
+                    <div class="col-auto d-none d-lg-block"> <img src="/iCoderBootStrap/images/thumb3.jpg" alt=""
                             height="250" width="200"> </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
                                 <use xlink:href="#chevron-right"></use>
                             </svg> </a>
                     </div>
-                    <div class="col-auto d-none d-lg-block"> <img src="images/thumb1.jpg" alt=""
+                    <div class="col-auto d-none d-lg-block"> <img src="/iCoderBootStrap/images/thumb1.jpg" alt=""
                             height="250" width="200"></div>
                 </div>
             </div>
